# skos-builder

./: pyproject.toml
skos_builder/: core.py  translate.py  utils.py  vocabularies.py
